[gd_scene load_steps=31 format=3 uid="uid://cxc8eqiutcut5"]

[ext_resource type="Texture2D" uid="uid://bsl5vqp8lv3w4" path="res://Forest/Materials/HDR/qwantani_night_puresky_4k.exr" id="1_o06y3"]
[ext_resource type="Texture2D" uid="uid://bw6jfm7bv2hcg" path="res://Forest/Materials/Textures/brown_mud_leaves_01_1k/textures/brown_mud_leaves_01_diff_1k.png" id="2_k7acu"]
[ext_resource type="Texture2D" uid="uid://ct5he2w6a6arp" path="res://Forest/Materials/Textures/brown_mud_leaves_01_1k/textures/brown_mud_leaves_01_ao_1k.png" id="3_5v1tr"]
[ext_resource type="Texture2D" uid="uid://ma4w1t5m5fga" path="res://Forest/Materials/Textures/brown_mud_leaves_01_1k/textures/brown_mud_leaves_01_nor_gl_1k.png" id="4_0fj1v"]
[ext_resource type="Texture2D" uid="uid://disqepemshd7k" path="res://Forest/Materials/Textures/brown_mud_leaves_01_1k/textures/brown_mud_leaves_01_rough_1k.png" id="5_ikia7"]
[ext_resource type="Texture2D" uid="uid://cift60nq8obo7" path="res://Forest/Materials/Textures/rocky_terrain_02_1k/textures/rocky_terrain_02_diff_1k.png" id="6_ikia7"]
[ext_resource type="Texture2D" uid="uid://bo7fqcje56ym8" path="res://Forest/Materials/Textures/rocky_terrain_02_1k/textures/rocky_terrain_02_ao_1k.png" id="7_7yui6"]
[ext_resource type="Texture2D" uid="uid://buvqewsx5nl4t" path="res://Forest/Materials/Textures/rocky_terrain_02_1k/textures/rocky_terrain_02_nor_gl_1k.png" id="8_c5t2i"]
[ext_resource type="Texture2D" uid="uid://cfble1i8gx3ee" path="res://Forest/Materials/Textures/rocky_terrain_02_1k/textures/rocky_terrain_02_rough_1k.png" id="9_e0ngr"]
[ext_resource type="PackedScene" uid="uid://dqdgeitwqnf3u" path="res://Forest/Scenes/tree.tscn" id="10_c5t2i"]
[ext_resource type="PackedScene" uid="uid://xwtxpacb1yup" path="res://Forest/Scenes/cabin.tscn" id="11_kn0ld"]
[ext_resource type="Script" uid="uid://h3mrvjyfujbt" path="res://Forest/Scenes/camera_3d.gd" id="12_7yui6"]
[ext_resource type="Script" uid="uid://bey3e8t865fvg" path="res://Forest/Scenes/performance_tracker.gd" id="12_c5t2i"]
[ext_resource type="ArrayOccluder3D" uid="uid://cuhdfcds2ypul" path="res://Forest/Scenes/world.occ" id="14_e0ngr"]
[ext_resource type="AudioStream" uid="uid://bnyh5gj7i010v" path="res://Forest/Materials/мистичная тема.mp3" id="14_kn0ld"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_dwbse"]
panorama = ExtResource("1_o06y3")
energy_multiplier = 0.02

[sub_resource type="Sky" id="Sky_pkg7o"]
sky_material = SubResource("PanoramaSkyMaterial_dwbse")

[sub_resource type="Environment" id="Environment_gbfbk"]
background_mode = 2
sky = SubResource("Sky_pkg7o")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ioo17"]
albedo_texture = ExtResource("2_k7acu")
roughness_texture = ExtResource("5_ikia7")
normal_enabled = true
normal_texture = ExtResource("4_0fj1v")
ao_enabled = true
ao_texture = ExtResource("3_5v1tr")
uv1_scale = Vector3(8, 8, 8)

[sub_resource type="PlaneMesh" id="PlaneMesh_gv5m4"]
material = SubResource("StandardMaterial3D_ioo17")
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hgpy0"]
albedo_texture = ExtResource("6_ikia7")
roughness_texture = ExtResource("9_e0ngr")
normal_enabled = true
normal_texture = ExtResource("8_c5t2i")
ao_enabled = true
ao_texture = ExtResource("7_7yui6")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="SphereMesh" id="SphereMesh_t2t4p"]
material = SubResource("StandardMaterial3D_hgpy0")
radius = 49.014
height = 52.639

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0pcbe"]
albedo_texture = ExtResource("6_ikia7")
roughness_texture = ExtResource("9_e0ngr")
normal_enabled = true
normal_texture = ExtResource("8_c5t2i")
ao_enabled = true
ao_texture = ExtResource("7_7yui6")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="CylinderMesh" id="CylinderMesh_axeuq"]
material = SubResource("StandardMaterial3D_0pcbe")
top_radius = 4.46
bottom_radius = 20.99
height = 110.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1cojt"]
albedo_texture = ExtResource("6_ikia7")
roughness_texture = ExtResource("9_e0ngr")
normal_enabled = true
normal_texture = ExtResource("8_c5t2i")
ao_enabled = true
ao_texture = ExtResource("7_7yui6")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yq1aw"]
material = SubResource("StandardMaterial3D_1cojt")
radius = 13.37
height = 140.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pyn1s"]
albedo_texture = ExtResource("6_ikia7")
roughness_texture = ExtResource("9_e0ngr")
normal_enabled = true
normal_texture = ExtResource("8_c5t2i")
ao_enabled = true
ao_texture = ExtResource("7_7yui6")

[sub_resource type="SphereMesh" id="SphereMesh_no8kt"]
material = SubResource("StandardMaterial3D_pyn1s")
radius = 72.776
height = 68.417

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7yui6"]
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.000612921, 0, 0.423062, 1)

[sub_resource type="SphereMesh" id="SphereMesh_c5t2i"]
material = SubResource("StandardMaterial3D_7yui6")
radius = 0.05
height = 1.5

[node name="World" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gbfbk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.273051, -0.41886, -7.32357e-08, -0.837719, 0.546102, -0.5, 0.472938, 0.725486, 0, 0, 0)
light_energy = 0.08
shadow_enabled = true
sky_mode = 1

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Environment"]
mesh = SubResource("PlaneMesh_gv5m4")
skeleton = NodePath("../..")

[node name="Mountain" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -64.4273, -8.37565, 78.5827)
mesh = SubResource("SphereMesh_t2t4p")
skeleton = NodePath("../..")

[node name="Mountain2" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(4.30648e-08, 0.985208, -0.171362, 1, -4.37114e-08, 0, -7.49046e-09, -0.171362, -0.985208, 6.0505, -5.94044, 58.4475)
mesh = SubResource("CylinderMesh_axeuq")
skeleton = NodePath("../..")

[node name="Mountain3" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -0.099424, -0.995045, 0, 0.995045, -0.099424, 54.4985, -3.12632, 10.0106)
mesh = SubResource("CapsuleMesh_yq1aw")
skeleton = NodePath("../..")

[node name="Mountain4" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.1376, 0, -110.164)
mesh = SubResource("SphereMesh_no8kt")
skeleton = NodePath("../..")

[node name="Mountain5" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -63.9694, -18.9059, -98.5374)
mesh = SubResource("SphereMesh_no8kt")
skeleton = NodePath("../..")

[node name="Mountain6" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -0.0093025, -0.999957, 0, 0.999957, -0.0093025, -65.0979, 1.55425, -3.94063)
mesh = SubResource("CapsuleMesh_yq1aw")
skeleton = NodePath("../..")

[node name="Forest" type="Node3D" parent="."]

[node name="Tree" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.6493)

[node name="Tree2" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8606, 0, 7.94933)

[node name="Tree3" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.0896, 0, 15.5479)

[node name="Tree4" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.945, 0, 30.7356)

[node name="Tree5" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.9104, 0, 39.0788)

[node name="Tree6" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.4056, 0, 24.8887)

[node name="Tree7" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.73311, 0, 32.8464)

[node name="Tree8" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5323, 0, 39.6432)

[node name="Tree9" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9275, 0, 20.4016)

[node name="Tree32" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8317, 0, 16.654)

[node name="Tree33" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.779, 0, -10.5283)

[node name="Tree34" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.9058, 0, 41.5221)

[node name="Tree35" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.8649, 0, 28.1865)

[node name="Tree36" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70685, 0, -4.29881)

[node name="Tree37" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.2905, 0, -2.72667)

[node name="Tree38" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.3605, 0, -24.0093)

[node name="Tree39" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.16589, 0, -24.0093)

[node name="Tree40" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40.8898, 0, -24.0093)

[node name="Tree10" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.5172, 0, 28.2897)

[node name="Tree11" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.5172, 0, 7.86442)

[node name="Tree12" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5357, 0, 3.41112)

[node name="Tree13" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.9697, 0, -12.6772)

[node name="Tree14" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.7854, 0, -33.0066)

[node name="Tree15" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5611, 0, -16.1036)

[node name="Tree16" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98431, 0, -12.6104)

[node name="Tree24" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3311, 0, -27.4147)

[node name="Tree25" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.0818, 0, 17.0063)

[node name="Tree26" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.96044, 0, -5.46352)

[node name="Tree27" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.3415, 0, -39.6182)

[node name="Tree28" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.3415, 0, -16.3179)

[node name="Tree29" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.3415, 0, 23.3978)

[node name="Tree30" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.93023, 0, 17.2325)

[node name="Tree31" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03159, 0, 35.1321)

[node name="Tree17" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.59814, 0, -31.0371)

[node name="Tree18" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.4096, 0, -25.3181)

[node name="Tree19" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.5292, 0, -12.2347)

[node name="Tree20" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.61, 0, -12.2347)

[node name="Tree21" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38.4915, 0, -37.6304)

[node name="Tree22" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45.6218, 0, -4.70658)

[node name="Tree23" parent="Forest" instance=ExtResource("10_c5t2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45.6218, 0, 12.81)

[node name="Cabin" parent="." instance=ExtResource("11_kn0ld")]
transform = Transform3D(-2, 0, -3.01992e-07, 0, 2, 0, 3.01992e-07, 0, -2, -33.3285, 0, 0.514402)

[node name="Rain" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.04569, 0)
amount = 200
lifetime = 1.5
fixed_fps = 30
visibility_aabb = AABB(-4, -4, -4, 8, 8, 8)
mesh = SubResource("SphereMesh_c5t2i")
emission_shape = 3
emission_box_extents = Vector3(50, 10, 50)
direction = Vector3(0, -1, 0)
spread = 5.0
gravity = Vector3(0, -20, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.309714, 0, 0.95083, 0, 1, 0, -0.95083, 0, 0.309714, 0, 1.85239, 0)
script = ExtResource("12_7yui6")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
occluder = ExtResource("14_e0ngr")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5183, 0, 0)
stream = ExtResource("14_kn0ld")
autoplay = true
max_distance = 50.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 224.0
offset_bottom = 163.0
script = ExtResource("12_c5t2i")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer"]
offset_right = 193.0
offset_bottom = 192.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="Control/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
